Combining Create and Next buttons

--- a/EyeHistoria/Views/Process/Index.cshtml
+++ b/EyeHistoria/Views/Process/Index.cshtml
@@ -191,15 +191,13 @@
                 <span asp-validation-for="p_gender" class="text-danger"></span>
             </div>
             <div class="form-group next-button-container">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" a asp-action="ChiefComplaintProcess" />
             </div>
         </form>
     </div>
 </div>
 
-<div class="next-link">
-    <a asp-action="ChiefComplaintProcess">NEXT ></a>
-</div>
+
 
 @section Scripts {
     @{
