--- a/EyeHistoria/Views/Process/HabitsProcess.cshtml
+++ b/EyeHistoria/Views/Process/HabitsProcess.cshtml
@@ -13,6 +13,48 @@
         margin: 20px; /* Add margin for overall spacing */
     }
 
+    .timeline-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        margin-bottom: 20px;
+    }
+
+    .timeline {
+        display: flex;
+        align-items: center;
+        flex: 1;
+    }
+
+    .timeline-circle {
+        width: 20px;
+        height: 20px;
+        background-color: #ced4da;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        margin-right: 20px;
+    }
+
+        .timeline-circle:not(:last-child) {
+            background-color: #007bff;
+            margin-left: 0; /* Remove margin for circles except the last one */
+        }
+
+    .timeline-line {
+        flex: 1;
+        height: 2px;
+        background-color: #ced4da;
+        margin-left: -20px; /* Remove spacing at the start of the lines */
+    }
+
+        .timeline-line:first-child {
+            background-color: #007bff;
+        }
+
+    #now {
+        background-color: #007bff;
+    }
+
     h4 {
         color: #007bff;
         font-size: 30px; /* Reduce font size for a balanced look */
@@ -97,6 +139,25 @@
         text-align: right;
     }
 </style>
+
+<h5>STEP FIVE: HABITS (You're almost there!)'</h5>
+
+<div class="timeline-container">
+    <!-- Timeline -->
+    <div class="timeline">
+        <div class="timeline-circle"></div>
+        <div class="timeline-line" id="now"></div>
+        <div class="timeline-circle"></div>
+        <div class="timeline-line" id="now"></div>
+        <div class="timeline-circle"></div>
+        <div class="timeline-line" id="now"></div>
+        <div class="timeline-circle"></div>
+        <div class="timeline-line" id="now"></div>
+        <div class="timeline-circle"></div>
+        <div class="timeline-line" id="now"></div>
+        <div class="timeline-circle"></div>
+    </div>
+</div>
 
 <h4>5. Habits</h4>
 <h5>Please learn more about the patient's lifestyle, habits.</h5>
