--- a/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
@@ -192,14 +192,10 @@
             </div>
 
             <div class="form-group next-button-container">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" a asp-action="PersonalHealthHistoryProcess" />
             </div>
         </form>
     </div>
-</div>
-
-<div class="next-link">
-    <a asp-action="PersonalHealthHistoryProcess">Next</a>
 </div>
 
 @section Scripts {
