--- a/EyeHistoria/Views/Process/PersonalOcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/PersonalOcularHistoryProcess.cshtml
@@ -255,14 +255,10 @@
             </div>
 
             <div class="form-group next-button-container">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" a asp-action="FamilyOcularHistoryProcess" />
             </div>
         </form>
     </div>
-</div>
-
-<div class="next-link">
-    <a asp-action="FamilyOcularHistoryProcess">Next</a>
 </div>
 
 @section Scripts {
