--- a/EyeHistoria/Views/Process/HabitsProcess.cshtml
+++ b/EyeHistoria/Views/Process/HabitsProcess.cshtml
@@ -224,14 +224,10 @@
             </div>
 
             <div class="form-group next-button-container">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" a asp-action="ChatBot" />
             </div>
         </form>
     </div>
-</div>
-
-<div class="next-link">
-    <a asp-action="ChatBot">Next</a>
 </div>
 
 @section Scripts {
