--- a/EyeHistoria/Views/Process/OcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/OcularHistoryProcess.cshtml
@@ -77,16 +77,12 @@
                     <!-- Add other FamilyOcularHistory fields -->
 
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <input type="submit" value="Create" class="btn btn-primary" a asp-action="Index" />
                     </div>
                 </form>
             </div>
         </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
