--- a/EyeHistoria/Views/Process/PersonalHealthHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/PersonalHealthHistoryProcess.cshtml
@@ -235,14 +235,10 @@
             </div>
 
             <div class="form-group next-button-container">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" a asp-action="FamilyHealthHistoryProcess" />
             </div>
         </form>
     </div>
-</div>
-
-<div class="next-link">
-    <a asp-action="FamilyHealthHistoryProcess">Next</a>
 </div>
 
 @section Scripts {
