Chatbot design reset

--- a/EyeHistoria/Views/Process/ChatBot.cshtml
+++ b/EyeHistoria/Views/Process/ChatBot.cshtml
@@ -1,5 +1,9 @@
 ﻿@model EyeHistoria.Models.Process
 
+@{
+    Layout = "_ProcessLayout";
+}
+
 <body>
     <script type="text/javascript">
         (function (d, t) {
