able to transport all changes from Process db(not all columns) to Voiceflow

--- a/EyeHistoria/Views/Process/ChatBot.cshtml
+++ b/EyeHistoria/Views/Process/ChatBot.cshtml
@@ -16,8 +16,39 @@
                             p_age: "@Model.demographic.p_age",
                             p_occuption: "@Model.demographic.p_occupation",
                             p_gender: "@Model.demographic.p_gender"
+                        },
+                        ChiefComplaint: {
+                            p_chiefcomplaint: "@Model.chiefComplaint.p_chiefcomplaint"
+                        },
+                        PersonalOcularHistory: {
+                            p_prescription: "@Model.personalOcularHistory.p_prescription",
+                            p_procedure: "@Model.personalOcularHistory.p_procedure",
+                            p_condition: "@Model.personalOcularHistory.p_condition"
+                        },
+                        FamilyOcularHistory: {
+                            pf_diseases: "@Model.familyOcularHistory.pf_diseases",
+                            dis_type: "@Model.familyOcularHistory.dis_type",
+                            dis_member: "@Model.familyOcularHistory.dis_member"
+                        },
+                        PersonalHealthHistory:{
+                            p_allergy: "@Model.personalHealthHistory.p_allergy",
+                            p_medication: "@Model.personalHealthHistory.p_medication",
+                            p_hcondition: "@Model.personalHealthHistory.p_hcondition",
+                            all_type: "@Model.personalHealthHistory.all_type",
+                            med_type: "@Model.personalHealthHistory.med_type",
+                            hcon_type: "@Model.personalHealthHistory.hcon_type"
+                        },
+                        FamilyHealthHistory:{
+                            pf_hdiseases: "@Model.familyHealthHistory.pf_hdiseases",
+                            hdis_type: "@Model.familyHealthHistory.hdis_type",
+                            hdis_member: "@Model.familyHealthHistory.hdis_member"
+                        },
+                        Habits:{
+                            p_smoke: "@Model.habits.p_smoke",
+                            p_drink: "@Model.habits.p_drink",
+                            s_freq: "@Model.habits.s_freq",
+                            d_freq: "@Model.habits.d_freq"
                         }
-
                     }}}
                 });
             }
