Setup summary page and finish ProcessDAL missing values, modifying model to accept null values

--- a/EyeHistoria/Views/Process/HabitsProcess.cshtml
+++ b/EyeHistoria/Views/Process/HabitsProcess.cshtml
@@ -224,7 +224,7 @@
             </div>
 
             <div class="form-group next-button-container">
-                <input type="submit" value="Create" class="btn btn-primary" a asp-action="ChatBot" />
+                <input type="submit" value="Create" class="btn btn-primary" a asp-action="Summary" />
             </div>
         </form>
     </div>
